# PolyDuck-Engine

./: CMakeLists.txt  app_icon.rc  imgui.ini  readme.md
.github/workflows/: cmake.yml
include/glad/: glad.h
include/graphics/: Camera.h  JsonHelpers.h  Material.h  Model.h  Primitives.h  SceneState.h  Shader.h  TextureLoader.h  UiManager.h
include/scene/: Scene.h  SceneNode.h
shaders/: shader.fs  shader.vs  skybox.fs  skybox.vs  unshaded.fs
src/: glad.c  main.cpp
src/graphics/: Material.cpp  Model.cpp  Primitives.cpp  Primitives.h  Shader.cpp  Shader.h  TextureLoader.cpp  UiManager.cpp
src/scene/: Scene.cpp  SceneNode.cpp
